<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/action_bar_search"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
  

    <item android:id="@+id/action_add"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/action_bar_add" />
    <item android:id="@+id/action_edit"
          android:icon="@android:drawable/ic_menu_edit"
          android:showAsAction="always"
          android:title="@string/action_bar_edit" />
    <item android:id="@+id/action_change"
          android:icon="@android:drawable/ic_menu_myplaces"
          android:showAsAction="always"
          android:title="@string/action_bar_change" />
    <item android:id="@+id/action_share"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/action_bar_share"
          android:showAsAction="always" />

</menu>
