<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
        android:orientation="vertical" 
        android:layout_width="match_parent" 
        android:layout_height="match_parent">

    <TextView 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="0" 
            android:paddingBottom="4dip" 
            android:textAppearance="?android:textAppearanceMedium" 
            android:text="@string/soft_input_modes_summary" 
            android:contentDescription="@string/soft_input_modes_summary"/>

    <LinearLayout 
            android:orientation="horizontal" 
            android:gravity="center" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">

        <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                
                android:textAppearance="?android:textAppearanceMedium" 
                android:text="@string/soft_input_modes_label" 
                
                android:contentDescription="@string/soft_input_modes_label"/>

        <Spinner 
                android:id="@+id/resize_mode" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" android:drawSelectorOnTop="true" />

    </LinearLayout>
    
    <TextView 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:paddingBottom="6dip" 
            android:background="@drawable/red" 
            android:textAppearance="?android:textAppearanceMedium" 
            android:text="@string/soft_input_modes_content" 
            android:contentDescription="@string/soft_input_modes_content"/>

    <EditText 
            android:id="@+id/saved" 
            android:layout_width="match_parent" 
            
            android:layout_height="wrap_content" 
            android:layout_weight="0" 
            android:background="@drawable/green" 
            android:text="@string/soft_input_modes_initial_text" 
            android:freezesText="true" 
            android:contentDescription="@string/soft_input_modes_initial_text">
        <requestFocus/>
    </EditText>

</LinearLayout>
