<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="match_parent" 
        android:layout_height="match_parent">
    <LinearLayout 
            android:orientation="vertical" 
            android:padding="4dip" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">

        <TextView 
                android:id="@+id/msg" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="0" 
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:paddingBottom="4dip"/>

        <TextView 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="0" 
                android:paddingBottom="4dip" 
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:text="@string/saves_state" 
                android:contentDescription="@string/saves_state"/>

        <EditText 
                android:id="@+id/saved" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="1" 
                android:background="@drawable/green" 
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:text="@string/initial_text" 
                android:freezesText="true" 
                android:contentDescription="@string/initial_text">
        </EditText>

        <TextView 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="0" 
                android:paddingTop="8dip" 
                android:paddingBottom="4dip" 
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:text="@string/no_saves_state" 
                android:contentDescription="@string/no_saves_state"/>

        <EditText 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="1" 
                android:background="@drawable/red" 
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:text="@string/initial_text" 
                android:contentDescription="@string/initial_text">
        </EditText>

    </LinearLayout>
</ScrollView>
